Fix icon positioning on mobile viewports

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,8 +37,6 @@ img {
 
 /* COMPOSITION */
 body {
-  /* width: 1440px;
-  height: 900px; */
   display: flex;
   justify-content: center;
   align-items: center;
